correcion postulaciones
